--- a/Formsflow-RobotFramework/results/report.html
+++ b/Formsflow-RobotFramework/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,148908],[],[[5,0,0,[6],[1,270,148632],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,293577],[],[[5,0,0,[6],[0,144,60754,7],[]],[8,0,0,[9],[1,60898,165002],[]],[10,0,0,[11],[1,225900,67675],[]]],[],[3,2,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Bundle create","*D:\\updated_develop\\forms-flow-ai-automation-testing\\Formsflow-RobotFramework\\test-cases\\Bundle_create.robot","*../test-cases/Bundle_create.robot","*<p>Form BundlingRBAC.\x3c/p>","*Bundle_Create","*BundleCreate"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AdminPermissions","*D:\\updated_develop\\forms-flow-ai-automation-testing\\Formsflow-RobotFramework\\test-cases\\AdminPermissions.robot","*../test-cases/AdminPermissions.robot","*<p>This test case is for checking all the permission available for admin user.\x3c/p>","*Dashboard Permissions","*dashboard","*Element with locator '//div[contains(text(),'Update success!')]' not found.","*Roles Creation Page permissions","*roles","*User Persmissions","*users"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:02:29","fail":0,"label":"BundleCreate","pass":1,"skip":0}],[{"elapsed":"00:02:29","fail":0,"id":"s1","label":"Bundle create","name":"Bundle create","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:04:53","fail":1,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:01:01","fail":1,"label":"dashboard","pass":0,"skip":0},{"elapsed":"00:02:45","fail":0,"label":"roles","pass":1,"skip":0},{"elapsed":"00:01:08","fail":0,"label":"users","pass":1,"skip":0}],[{"elapsed":"00:04:54","fail":1,"id":"s1","label":"AdminPermissions","name":"AdminPermissions","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1707460060041;
+window.output["baseMillis"] = 1707714168267;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 148958;
+window.output["generated"] = 293591;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
